[tool.poetry]
name = "csi"
version = "0.1.0"
description = "Centreon Service Investigation - CLuster services based on status sequence"
authors = ["Denis Roussel <droussel@centreon.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mysql-connector-python = "^9.1.0"
levenshtein = "^0.26.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
typer = "^0.12.5"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.3.241009"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
csi = "csi.cli:app"
